--- a/html/css/sass/patterns/0-footer.scss
+++ b/html/css/sass/patterns/0-footer.scss
@@ -70,6 +70,9 @@ footer a {
   font-size: 1em;
   font-weight: 400;
   color: $white;
+  &:hover {
+    border-bottom: 0.1em dotted $white;
+  }
 }
 
 footer {
