--- a/html/css/output/global.css
+++ b/html/css/output/global.css
@@ -668,22 +668,6 @@ iframe {
   overflow: hidden;
   height: 15em; }
 
-.guide .pattern-footer iframe.thicker {
-  outline: 0;
-  border: 0;
-  width: 100%;
-  max-width: 40em;
-  height: 33em;
-  overflow: hidden; }
-
-.guide .pattern-footer iframe.thinner {
-  outline: 0;
-  border: 0;
-  width: 100%;
-  max-width: 30em;
-  height: 33em;
-  overflow: hidden; }
-
 .guide .pattern-responsive-tables iframe {
   outline: 0;
   border: 0;
@@ -899,7 +883,7 @@ pre {
     width: 90%;
     margin-left: 0; }
   .guide .pattern-footer .hljs {
-    min-height: 50em; }
+    min-height: 25em; }
   .webfontloader .hljs {
     min-height: 26em;
     max-height: 26em; }
@@ -1013,7 +997,7 @@ pre {
 
 .footer__top {
   background-color: #008EBE;
-  padding: 1.2em 8% 1.5em 8%; }
+  padding: 2em 8% 1.5em 8%; }
 
 .footer__top__report-issues {
   margin-bottom: 0.5em; }
@@ -1058,7 +1042,7 @@ pre {
 
 .footer__nav {
   background-color: #007da7;
-  padding: 1em 8% 0.5em 8%;
+  padding: 1.5em 8% 0.5em 8%;
   text-align: center; }
 
 .footer__nav li {
@@ -1115,6 +1099,8 @@ footer i {
     clear: both;
     float: none;
     margin: 0 auto 1em auto; }
+  .footer__nav {
+    padding: 1em 8% 0.5em 8%; }
   footer i {
     display: inline-block;
     width: 13.75em; } }
