--- a/html/css/sass/patterns/02-buttons-and-calls-to-action.scss
+++ b/html/css/sass/patterns/02-buttons-and-calls-to-action.scss
@@ -11,12 +11,43 @@
   padding: 0.6em 1.2em;
   font-weight: 600;
   cursor: pointer;
-  margin-bottom: 1.5em;
+  margin: 0 1em 1.5em 0;
   border-bottom: none;
   @include transition(background-color,0.15s); // Kin Mixin
   &:hover {
     text-decoration: underline;
     background-color: scale-color($dark, $lightness: 15%);
+  }
+}
+
+.btn--mid {
+  background-color: $mid;
+  &:hover {
+    background-color: scale-color($mid, $lightness: 15%);
+  }
+}
+.btn--light {
+  background-color: $light;
+  &:hover {
+    background-color: scale-color($light, $lightness: 15%);
+  }
+}
+.btn--light-pastel {
+  background-color: $light-pastel;
+  &:hover {
+    background-color: scale-color($light-pastel, $lightness: 15%);
+  }
+}
+.btn--contrast {
+  background-color: $contrast;
+  &:hover {
+    background-color: scale-color($contrast, $lightness: 15%);
+  }
+}
+.btn--contrast-alt {
+  background-color: $contrast-alt;
+  &:hover {
+    background-color: scale-color($contrast-alt, $lightness: 15%);
   }
 }
 
