--- a/html/css/output/global.css
+++ b/html/css/output/global.css
@@ -398,6 +398,18 @@ p {
 .icon-pattern {
   background-repeat: repeat; }
 
+.bg--dark {
+  background-color: #003552; }
+
+.bg--mid {
+  background-color: #008EBE; }
+
+.bg--light {
+  background-color: #52CEF4; }
+
+.bg--light-pastel {
+  background-color: #C0E6F3; }
+
 /*! responsive-nav.js 1.0.32 by @viljamis */
 .nav-collapse ul, .guidenav-collapse ul, .search-collapse div {
   margin: 0;
@@ -445,7 +457,8 @@ body, .wf-loading body, .wf-inactive body {
   font-weight: 600;
   font-style: normal;
   color: #002C44;
-  margin: 0 0 1em 0; }
+  margin: 0 0 1em 0;
+  line-height: 1.2em; }
 
 .heading--mid {
   color: #008EBE; }
@@ -812,33 +825,15 @@ pre {
 .hierarchy .panels {
   padding-top: 3em; }
 
-.bg-light-pastel, .bg-dark, .bg-mid, .bg-light {
-  padding: 1em; }
-
-.bg-light-pastel {
-  background-color: #C0E6F3; }
-
-.bg-dark {
-  background-color: #003552; }
-
-.bg-mid {
-  background-color: #008EBE; }
-
-.bg-light {
-  background-color: #52CEF4; }
-
 .pattern-buttons-and-calls-to-action h2 {
   margin-bottom: 1em; }
 
-.pattern-buttons-and-calls-to-action .bg-light-pastel, .pattern-buttons-and-calls-to-action .bg-dark, .pattern-buttons-and-calls-to-action .bg-light {
+.bg {
   margin-top: 2em;
-  padding: 1em 1em 0 1em; }
+  padding: 1.5em 1.5em 1.5em 1.5em; }
 
-.pattern-buttons-and-calls-to-action .bg-light {
+.pattern-buttons-and-calls-to-action .bg--light-pastel {
   margin-bottom: 2em; }
-
-.pattern-buttons-and-calls-to-action button.cta, .pattern-buttons-and-calls-to-action input.cta {
-  margin-bottom: 3em; }
 
 .pattern-buttons-and-calls-to-action .panels, .pattern-buttons-and-calls-to-action .panels div {
   margin-top: 0; }
@@ -994,6 +989,18 @@ pre {
 
 .icon-pattern {
   background-repeat: repeat; }
+
+.bg--dark {
+  background-color: #003552; }
+
+.bg--mid {
+  background-color: #008EBE; }
+
+.bg--light {
+  background-color: #52CEF4; }
+
+.bg--light-pastel {
+  background-color: #C0E6F3; }
 
 .footer__top {
   background-color: #008EBE;
@@ -1180,6 +1187,18 @@ footer i {
 .icon-pattern {
   background-repeat: repeat; }
 
+.bg--dark {
+  background-color: #003552; }
+
+.bg--mid {
+  background-color: #008EBE; }
+
+.bg--light {
+  background-color: #52CEF4; }
+
+.bg--light-pastel {
+  background-color: #C0E6F3; }
+
 .header {
   background-color: #ffffff;
   width: 100%;
@@ -1308,6 +1327,18 @@ footer i {
 
 .icon-pattern {
   background-repeat: repeat; }
+
+.bg--dark {
+  background-color: #003552; }
+
+.bg--mid {
+  background-color: #008EBE; }
+
+.bg--light {
+  background-color: #52CEF4; }
+
+.bg--light-pastel {
+  background-color: #C0E6F3; }
 
 .nav__trigger {
   background-repeat: repeat;
@@ -1535,6 +1566,18 @@ footer i {
 .icon-pattern {
   background-repeat: repeat; }
 
+.bg--dark {
+  background-color: #003552; }
+
+.bg--mid {
+  background-color: #008EBE; }
+
+.bg--light {
+  background-color: #52CEF4; }
+
+.bg--light-pastel {
+  background-color: #C0E6F3; }
+
 body {
   background-color: #ffffff;
   background-attachment: fixed;
@@ -1575,6 +1618,18 @@ body {
 .icon-pattern {
   background-repeat: repeat; }
 
+.bg--dark {
+  background-color: #003552; }
+
+.bg--mid {
+  background-color: #008EBE; }
+
+.bg--light {
+  background-color: #52CEF4; }
+
+.bg--light-pastel {
+  background-color: #C0E6F3; }
+
 /* Buttons / CTAs */
 .btn {
   font-size: 1.1em;
@@ -1585,40 +1640,79 @@ body {
   font-weight: 600;
   cursor: pointer;
   margin: 0 1em 1.5em 0;
-  border-bottom: none;
   -webkit-transition: background-color 0.15s ease-in-out;
   -moz-transition: background-color 0.15s ease-in-out;
   -ms-transition: background-color 0.15s ease-in-out;
   -o-transition: background-color 0.15s ease-in-out;
-  transition: background-color 0.15s ease-in-out; }
+  transition: background-color 0.15s ease-in-out;
+  border-top: none;
+  border-bottom: 0.2em solid #001a29; }
   .btn:hover {
     text-decoration: underline;
-    background-color: #005e92; }
+    box-shadow: inset 0 0 0 0.2em #0088d2;
+    background-color: #005e92;
+    border-bottom: 0.2em solid #002235; }
 
 .btn--mid {
-  background-color: #008EBE; }
+  background-color: #008EBE;
+  border-bottom: 0.2em solid #006385; }
   .btn--mid:hover {
-    background-color: #00b2ee; }
+    box-shadow: inset 0 0 0 0.2em #1fc6ff;
+    background-color: #008EBE;
+    border-bottom: 0.2em solid #0080ab; }
 
 .btn--light {
-  background-color: #52CEF4; }
+  background-color: #52CEF4;
+  color: #002C44;
+  border-bottom: 0.2em solid #0ea7d7; }
   .btn--light:hover {
-    background-color: #6cd5f6; }
+    box-shadow: inset 0 0 0 0.2em #97e2f8;
+    background-color: #52CEF4;
+    border-bottom: 0.2em solid #15bdf0; }
 
 .btn--light-pastel {
-  background-color: #C0E6F3; }
+  background-color: #C0E6F3;
+  color: #002C44;
+  border-bottom: 0.2em solid #77c9e5; }
   .btn--light-pastel:hover {
-    background-color: #c9eaf5; }
+    box-shadow: inset 0 0 0 0.2em #d9f0f8;
+    background-color: #C0E6F3;
+    border-bottom: 0.2em solid #9bd8ec; }
 
 .btn--contrast {
-  background-color: #dc6f00; }
+  background-color: #dc6f00;
+  border-bottom: 0.2em solid #844300; }
   .btn--contrast:hover {
-    background-color: #ff8509; }
+    box-shadow: inset 0 0 0 0.2em #ff9a34;
+    background-color: #dc6f00;
+    border-bottom: 0.2em solid #9a4e00; }
 
 .btn--contrast-alt {
-  background-color: #00A659; }
+  background-color: #00A659;
+  border-bottom: 0.2em solid #006435; }
   .btn--contrast-alt:hover {
-    background-color: #00da75; }
+    box-shadow: inset 0 0 0 0.2em #00eb7e;
+    background-color: #00A659;
+    border-bottom: 0.2em solid #008547; }
+
+.btn--white {
+  background-color: #ffffff;
+  border-bottom: 0.2em solid #b3b3b3;
+  color: #002C44; }
+  .btn--white:hover {
+    box-shadow: inset 0 0 0 0.2em #C0E6F3;
+    background-color: #ffffff;
+    border-bottom: 0.2em solid #b3b3b3; }
+
+.btn--disabled {
+  background-color: #ccc;
+  border-bottom: 0.2em solid #b3b3b3;
+  color: #666; }
+  .btn--disabled:hover {
+    text-decoration: none;
+    box-shadow: none;
+    background-color: #ccc;
+    border-bottom: 0.2em solid #b3b3b3; }
 
 /* Removes awkward default styles on some inputs for mobile */
 input[type="button"], input[type="reset"], input[type="submit"] {
@@ -1642,16 +1736,28 @@ button, input[type="button"], input[type="reset"], input[type="submit"] {
 .icon-pattern {
   background-repeat: repeat; }
 
+.bg--dark {
+  background-color: #003552; }
+
+.bg--mid {
+  background-color: #008EBE; }
+
+.bg--light {
+  background-color: #52CEF4; }
+
+.bg--light-pastel {
+  background-color: #C0E6F3; }
+
 .quote {
   margin: 1.5em 0;
   border-top: 0.1em solid;
   border-bottom: 0.1em solid;
-  border-color: #ebf7fb;
+  border-color: #C0E6F3;
   padding: 1em 1em;
   font-style: italic;
   font-size: 1.4em;
   line-height: 1.3em;
-  color: #008EBE; }
+  color: #0079A1; }
 
 blockquote.quote__blockquote {
   margin: 0; }
@@ -1664,7 +1770,7 @@ blockquote.quote__blockquote {
   font-size: 1.6em;
   vertical-align: -0.2em;
   margin-left: -0.1em;
-  color: #C0E6F3; }
+  color: #52CEF4; }
 
 .quote em {
   font-style: normal; }
@@ -1728,6 +1834,18 @@ ol ul li:before {
 
 .icon-pattern {
   background-repeat: repeat; }
+
+.bg--dark {
+  background-color: #003552; }
+
+.bg--mid {
+  background-color: #008EBE; }
+
+.bg--light {
+  background-color: #52CEF4; }
+
+.bg--light-pastel {
+  background-color: #C0E6F3; }
 
 /* Pagination */
 ol.pagination {
@@ -1797,6 +1915,18 @@ ol.pagination li {
 
 .icon-pattern {
   background-repeat: repeat; }
+
+.bg--dark {
+  background-color: #003552; }
+
+.bg--mid {
+  background-color: #008EBE; }
+
+.bg--light {
+  background-color: #52CEF4; }
+
+.bg--light-pastel {
+  background-color: #C0E6F3; }
 
 /* Forms */
 input[type="email"], input[type="number"], input[type="search"], input[type="text"], input[type="tel"], input[type="url"], input[type="password"], input[list], input[type="file"], input[type="date"], input[type="month"], input[type="week"], input[type="time"], input[type="range"], input[type="search"], textarea, select {
@@ -1873,8 +2003,8 @@ select[multiple] {
   height: auto; }
 
 textarea[disabled], input[disabled], select[disabled] {
-  background-color: #ebf7fb;
-  color: #003552; }
+  background-color: #ccc;
+  color: #666; }
 
 textarea[disabled]:hover, input[disabled]:hover, select[disabled]:hover {
   cursor: not-allowed; }
@@ -1894,6 +2024,18 @@ select:-internal-list-box option:checked {
 .icon-pattern {
   background-repeat: repeat; }
 
+.bg--dark {
+  background-color: #003552; }
+
+.bg--mid {
+  background-color: #008EBE; }
+
+.bg--light {
+  background-color: #52CEF4; }
+
+.bg--light-pastel {
+  background-color: #C0E6F3; }
+
 .feedback {
   background-color: #bff8ed;
   border-bottom: 0.2em solid #9af4e3;
@@ -1910,6 +2052,18 @@ select:-internal-list-box option:checked {
 
 .icon-pattern {
   background-repeat: repeat; }
+
+.bg--dark {
+  background-color: #003552; }
+
+.bg--mid {
+  background-color: #008EBE; }
+
+.bg--light {
+  background-color: #52CEF4; }
+
+.bg--light-pastel {
+  background-color: #C0E6F3; }
 
 .feedback--error {
   background-color: #ffcdb3;
@@ -1928,6 +2082,18 @@ html\:abbr, abbr {
 
 .icon-pattern {
   background-repeat: repeat; }
+
+.bg--dark {
+  background-color: #003552; }
+
+.bg--mid {
+  background-color: #008EBE; }
+
+.bg--light {
+  background-color: #52CEF4; }
+
+.bg--light-pastel {
+  background-color: #C0E6F3; }
 
 .image {
   display: inline-block;
@@ -1958,6 +2124,18 @@ html\:abbr, abbr {
 
 .icon-pattern {
   background-repeat: repeat; }
+
+.bg--dark {
+  background-color: #003552; }
+
+.bg--mid {
+  background-color: #008EBE; }
+
+.bg--light {
+  background-color: #52CEF4; }
+
+.bg--light-pastel {
+  background-color: #C0E6F3; }
 
 /* /// Responsive Tables */
 /* make each table separate from other ones */
