--- a/html/css/output/patterns/0-navigation.css
+++ b/html/css/output/patterns/0-navigation.css
@@ -9,6 +9,18 @@
 .icon-pattern {
   background-repeat: repeat; }
 
+.bg--dark {
+  background-color: #003552; }
+
+.bg--mid {
+  background-color: #008EBE; }
+
+.bg--light {
+  background-color: #52CEF4; }
+
+.bg--light-pastel {
+  background-color: #C0E6F3; }
+
 .nav__trigger {
   background-repeat: repeat;
   background-color: #002C44;
