--- a/html/css/output/patterns/09-feedback-error.css
+++ b/html/css/output/patterns/09-feedback-error.css
@@ -8,6 +8,18 @@
 .icon-pattern {
   background-repeat: repeat; }
 
+.bg--dark {
+  background-color: #003552; }
+
+.bg--mid {
+  background-color: #008EBE; }
+
+.bg--light {
+  background-color: #52CEF4; }
+
+.bg--light-pastel {
+  background-color: #C0E6F3; }
+
 .feedback--error {
   background-color: #ffcdb3;
   border-bottom: 0.2em solid #ffbc9a; }
