--- a/html/css/output/patterns/05-list-ordered.css
+++ b/html/css/output/patterns/05-list-ordered.css
@@ -12,7 +12,7 @@ li {
   margin-bottom: 1em; }
 
 ol li:before {
-  content: counters(item, ".") " ";
+  content: counters(item, ".") ". ";
   counter-increment: item; }
 
 ol ul li:before {
