--- a/html/css/output/patterns/04-list-unordered.css
+++ b/html/css/output/patterns/04-list-unordered.css
@@ -1,5 +1,5 @@
 ul {
-  list-style: circle inside;
+  list-style: disc inside;
   padding-left: 0;
   margin: 0;
   padding: 0; }
@@ -7,6 +7,9 @@ ul {
 ol {
   list-style: none;
   counter-reset: item; }
+
+ul ul {
+  list-style: circle inside; }
 
 ul ul, ul ol {
   margin: 1em 0 1em 2em;
@@ -16,7 +19,7 @@ li {
   margin-bottom: 1em; }
 
 ol li:before {
-  content: counters(item, ".") " ";
+  content: counters(item, ".");
   counter-increment: item; }
 
 /*# sourceMappingURL=04-list-unordered.css.map */
