--- a/html/css/sass/patterns/04-list-unordered.scss
+++ b/html/css/sass/patterns/04-list-unordered.scss
@@ -1,5 +1,5 @@
 ul {
-  list-style: circle inside; 
+  list-style: disc inside; 
   padding-left: 0;
   margin: 0; 
   padding: 0;
@@ -8,6 +8,10 @@ ul {
 ol {
   list-style: none;
   counter-reset: item; 
+}
+
+ul ul {
+  list-style: circle inside; 
 }
 
 ul ul,
@@ -21,6 +25,6 @@ li {
 }
 
 ol li:before { 
-  content: counters(item, ".") " "; 
+  content: counters(item, "."); 
   counter-increment: item; 
 }
