--- a/html/css/sass/patterns/05-list-ordered.scss
+++ b/html/css/sass/patterns/05-list-ordered.scss
@@ -16,7 +16,7 @@ li {
 }
 
 ol li:before { 
-  content: counters(item, ".") " "; 
+  content: counters(item, ".") ". "; 
   counter-increment: item 
 }
 
