--- a/html/css/sass/patterns/06-pagination.scss
+++ b/html/css/sass/patterns/06-pagination.scss
@@ -17,41 +17,37 @@ ol.pagination li {
 
 .pagination a {
   display: inline-block;
-  margin: 0 0.3em 0.5em 0;
+  margin: 0 0.5em 0.5em 0;
   padding: 0.51em 0.5em;
   height: 2.2em;
   min-width: 2.2em;
   font-size: 1.1em;
   font-weight: 500;
   text-align: center;
-  background-color: $white;
-  border-bottom: 0.2em solid $dark;
+  background-color: $mid;
+  color: $white;
   &:hover {
     text-decoration: underline;
     background-color: $dark-text;
-    color: $white;
-    border-color: darken($dark,10%);
   }
 }
 
 .pagination__current a {
-  background-color: $mid;
+  background-color: $dark;
   color: $white;
-  border-bottom: 0.2em solid lighten($dark,10%);
   cursor: not-allowed;
+  border: none;
   &:hover {
-    text-decoration: none;
+    text-decoration: underline;
     color: $white;
-    background-color: $mid;
-    border-color: lighten($dark,10%);
   }
 }
 
 .pagination__previous a,
 .pagination__next a {
-  background-color: $mid;
+  background-color: $dark;
   color: $white;
-  border-bottom: 0.2em solid lighten($dark,10%);
+  border-bottom: none;
   padding: 0.1em 0.1em;
   height: 2.2em;
   width: 2.2em;
@@ -64,13 +60,12 @@ ol.pagination li {
 
 .pagination__previous.no-more a,
 .pagination__next.no-more a {
-  background-color: $dark;
-  color: darken($dark,20%);
-  border-bottom: 0.2em solid darken($dark,15%);
+  background-color: #ccc;
+  color: #555;
   cursor: not-allowed;
+  border-bottom: none;
   &:hover {
     text-decoration: none;
-    color: darken($dark,20%);
-    border-color: darken($dark,15%);
+    color: #555;
   }
 }
