--- a/html/css/sass/_Patterns-ImportMap.scss
+++ b/html/css/sass/_Patterns-ImportMap.scss
@@ -10,6 +10,7 @@
 @import "patterns/04-list-unordered";
 @import "patterns/05-list-ordered";
 @import "patterns/06-pagination";
+@import "patterns/06-tab-ui";
 @import "patterns/07-form-fields";
 @import "patterns/08-feedback";
 @import "patterns/09-feedback-error";
