Calls to action pattern

--- a/html/assets-icons/output/icons.fallback.css
+++ b/html/assets-icons/output/icons.fallback.css
@@ -4,6 +4,8 @@
 
 .icon-body-background { background-image: url('png/body-background.png'); background-repeat: no-repeat; }
 
+.icon-circle-arrow { background-image: url('png/circle-arrow.png'); background-repeat: no-repeat; }
+
 .icon-close { background-image: url('png/close.png'); background-repeat: no-repeat; }
 
 .icon-footer-partner-cs { background-image: url('png/footer-partner-cs.png'); background-repeat: no-repeat; }
