--- a/html/css/sass/_Patterns-ImportMap.scss
+++ b/html/css/sass/_Patterns-ImportMap.scss
@@ -5,7 +5,8 @@
 @import "patterns/0-navigation";
 @import "patterns/01-body-background";
 @import "patterns/01-layout-cap";
-@import "patterns/02-buttons-and-calls-to-action";
+@import "patterns/02-buttons";
+@import "patterns/02-calls-to-action";
 @import "patterns/03-blockquote";
 @import "patterns/04-list-unordered";
 @import "patterns/05-list-ordered";
