--- a/html/css/output/global.css
+++ b/html/css/output/global.css
@@ -1756,6 +1756,121 @@ button, input[type="button"], input[type="reset"], input[type="submit"] {
 .bg--light-pastel {
   background-color: #C0E6F3; }
 
+.cta:before, .cta:after {
+  display: table;
+  line-height: 0;
+  content: ""; }
+
+.cta:after {
+  clear: both; }
+
+.cta {
+  display: inline-block;
+  width: 100%;
+  margin: 0 0 1.5em 0;
+  padding: 0.8em;
+  background-color: #008EBE;
+  border-left: 1em solid #002C44;
+  border-bottom: none; }
+
+.cta span {
+  display: inline-block;
+  padding-bottom: 0.5em;
+  font-size: 1.2em;
+  font-weight: 400;
+  color: #ffffff; }
+
+.cta .icon-circle-arrow {
+  width: 2.125em;
+  height: 2.125em; }
+
+.cta--light {
+  background-color: #C0E6F3; }
+  .cta--light span {
+    color: #003552; }
+
+.cta.icon-pattern {
+  border-color: #002031; }
+
+.cta--no-circle div {
+  display: none; }
+
+.cta--block {
+  border: none;
+  padding: 1.5em; }
+  .cta--block span {
+    font-weight: 600; }
+
+.cta--block.icon-pattern p {
+  color: #ffffff; }
+
+@media only all and (min-width: 20em) {
+  .cta {
+    border-left: 1.5em solid #002C44; }
+  .cta span {
+    width: 80%;
+    float: left; }
+  .cta div {
+    width: 20%;
+    float: right;
+    text-align: right;
+    padding-top: 0.5em; }
+  .cta--no-circle span {
+    width: 100%;
+    padding-bottom: 0.8em; }
+  .cta--block {
+    border: none; }
+    .cta--block span {
+      width: 100%;
+      margin-bottom: 0.5em; }
+    .cta--block p {
+      width: 80%;
+      float: left; }
+  .cta--block.cta--no-circle span, .cta--block.cta--no-circle p {
+    width: 100%; } }
+
+@media only all and (min-width: 30em) {
+  .cta {
+    padding: 1em; }
+  .cta span {
+    font-size: 1.4em;
+    padding: 0; }
+  .cta div {
+    padding-top: 0.4em; }
+  .cta--block {
+    padding: 1.7em; } }
+
+@media only all and (min-width: 32.5em) {
+  .cta span {
+    font-size: 1.5em;
+    padding-top: 0.4em; }
+  .cta--no-circle {
+    padding: 1.5em 1em 1.5em 1em; }
+    .cta--no-circle span {
+      padding-top: 0; } }
+
+.pattern {
+  background: url(../../assets/pattern.png);
+  background: url(../../assets/pattern.svg), linear-gradient(transparent, transparent);
+  /* This trick ensures that our background SVG is only 
+    used in browsers that support it (a 'coincidence'
+    feature test): https://css-tricks.com/a-complete-guide-to-svg-fallbacks/#fallback-svg-css-background-image */ }
+
+.icon-pattern {
+  background-repeat: repeat; }
+
+.bg--dark {
+  background-color: #003552; }
+
+.bg--mid {
+  background-color: #008EBE; }
+
+.bg--light {
+  background-color: #52CEF4; }
+
+.bg--light-pastel {
+  background-color: #C0E6F3; }
+
 .quote {
   margin: 1.5em 0;
   border-top: 0.1em solid;
@@ -1965,7 +2080,6 @@ ol.pagination li {
   .js-tabs .tabs .tabs__print-all a {
     display: inline-block;
     width: 100%;
-    text-align: right;
     border-bottom: none; }
   .js-tabs .tabs .tabs__print-all:hover {
     text-decoration: underline; }
@@ -2023,7 +2137,8 @@ ol.pagination li {
     padding: 0.2em 1em 0.85em 0;
     border-bottom: 0.15em solid #52bbde; }
     .js-tabs .tabs .tabs__print-all a {
-      color: #002C44; }
+      color: #002C44;
+      text-align: right; }
   .js-tabs .tabs.js-tab-ui [aria-selected=true] {
     color: #008EBE;
     font-weight: 600;
