--- a/html/css/sass/_6-guide.scss
+++ b/html/css/sass/_6-guide.scss
@@ -201,6 +201,12 @@ iframe {
   margin-top: 0.5em;
 }
 
+.guide .guidepattern.pattern-content-indexes .display,
+.guide .guidepattern.pattern-content-indexes .panels {
+  width: 100%;
+  margin: 0 0 1.5em 0;
+}
+
 .guidance strong,
 .guidance b {
   font-weight: 600;
