--- a/html/css/sass/_Patterns-ImportMap.scss
+++ b/html/css/sass/_Patterns-ImportMap.scss
@@ -12,6 +12,7 @@
 @import "patterns/05-list-ordered";
 @import "patterns/06-content-indexes";
 @import "patterns/06-pagination";
+@import "patterns/06-subnavigation";
 @import "patterns/06-tab-ui";
 @import "patterns/07-form-fields";
 @import "patterns/08-feedback";
