Items listing patterns

--- a/html/css/sass/_Patterns-ImportMap.scss
+++ b/html/css/sass/_Patterns-ImportMap.scss
@@ -11,6 +11,7 @@
 @import "patterns/04-list-unordered";
 @import "patterns/05-list-ordered";
 @import "patterns/06-content-indexes";
+@import "patterns/06-list-of-items";
 @import "patterns/06-pagination";
 @import "patterns/06-subnavigation";
 @import "patterns/06-tab-ui";
