--- a/html/css/sass/patterns/06-content-indexes.scss
+++ b/html/css/sass/patterns/06-content-indexes.scss
@@ -13,7 +13,7 @@
   font-size: 1.2em;
 }
 
-.list__jump-nav ol{ 
+.list__jump-nav ol { 
   list-style: none;
   text-align: center;
 }
@@ -83,6 +83,11 @@
 }
 
 @media only all and (min-width: 41em) {
+  
+  .list__jump-nav ol { 
+    max-width: 80%;
+    margin: 0 auto;
+  }
   
   .list__content .list__content__item span {
     display: inline;
