--- a/html/css/output/global.css
+++ b/html/css/output/global.css
@@ -605,10 +605,29 @@ My friend Scott Kellum, design director at Treesaver, has now sent me this refac
   /* Really long strings of text will never flow into the container because they always flow away from the container.
 Performance is dramatically improved because a 9999px box is not drawn. Noticeably so in animations on the iPad 1. */ }
 
-@media only all and (min-width: 41em) {
-  .body-wrapper {
-    width: 75vw;
-    margin-left: 25vw; } }
+.body-wrapper {
+  padding: 0 8%; }
+  @media only all and (min-width: 41em) {
+    .body-wrapper {
+      width: 75vw;
+      margin-left: 25vw;
+      padding: 0 5%; } }
+
+.body-wrapper.outsider {
+  padding: 0;
+  margin-top: 2em; }
+  @media only all and (min-width: 41em) {
+    .body-wrapper.outsider {
+      width: 75vw;
+      margin-left: 25vw;
+      padding: 0; } }
+
+.heading-wrapper {
+  padding-top: 1em;
+  padding-bottom: 0.6em;
+  color: #ffffff; }
+  .heading-wrapper .heading {
+    color: #ffffff; }
 
 .guide {
   background-color: #C0E6F3;
@@ -642,12 +661,6 @@ Performance is dramatically improved because a 9999px box is not drawn. Noticeab
   color: #222;
   display: inline;
   margin: 0 auto 1.5em auto; }
-
-.guide .styleguide {
-  padding: 2em 8% 1.5em 8%; }
-  @media only all and (min-width: 41em) {
-    .guide .styleguide {
-      padding: 2em 5% 1.5em 5%; } }
 
 .guide .guidepattern {
   clear: both;
@@ -711,8 +724,7 @@ h2.guidance {
 
 .pattern__back-to-top {
   display: inline-block;
-  margin-bottom: 1em;
-  margin-left: 5%; }
+  margin-bottom: 1em; }
 
 .guidepattern .pattern__back-to-top {
   margin-left: 0; }
@@ -2044,6 +2056,9 @@ ol ul li:before {
   font-style: italic; }
 
 @media only all and (min-width: 41em) {
+  .list__jump-nav ol {
+    max-width: 80%;
+    margin: 0 auto; }
   .list__content .list__content__item span {
     display: inline; }
     .list__content .list__content__item span:before {
